--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lint": "vue-cli-service lint",
     "build:lib": "vue-cli-service build --target lib ./src/components/index.ts",
     "build:type": "tsc -P tsconfig.lib.json",
-    "prepublishOnly": "yarn build:lib && yarn build:type && yarn release",
-    "release": "standard-version && git add * && git push --follow-tags origin main"
+    "version": "yarn build:lib && yarn build:type && git add -A dist",
+    "postversion": "git push && git push --tags && npm publish"
   },
   "main": "dist/vue-drop-image.common.js",
   "typings": "dist/types/index.d.ts",
@@ -19,6 +19,7 @@
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
   },
+  "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -36,7 +37,6 @@
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "standard-version": "^9.3.2",
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.5",
     "vue-template-compiler": "^2.6.11",
@@ -45,6 +45,10 @@
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
+  "files": [
+    "dist/**/*.js",
+    "dist/**/*.js.map"
+  ],
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
       "vue-cli-service lint",
