--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@vue/composition-api": "^1.4.1",
     "core-js": "^3.6.5",
     "html-load-image": "^1.3.0",
-    "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "vue": "^2.6.11"
   },
   "license": "MIT",
   "devDependencies": {
@@ -40,6 +39,7 @@
     "typescript": "~4.1.5",
     "vue-cli-plugin-vuetify": "~2.4.5",
     "vue-template-compiler": "^2.6.11",
+    "vuetify": "^2.4.0",
     "vuetify-loader": "^1.7.0"
   },
   "gitHooks": {
