--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "emitDeclarationOnly": true,
-    "outDir": "dist/types"
+    "outDir": "dist"
   },
   "include": [
     "src/components/**/*.ts",
