add declaration file

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   },
   "files": [
     "dist/**/*.js",
-    "dist/**/*.js.map"
+    "dist/**/*.js.map",
+    "dist/**/*.d.ts"
   ],
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
